[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Non Playables/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Logo/logo frame 2.png" type="Texture" id=2]
[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Interface/botao-export.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Logo/logo frame 1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/botao-hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/LÃ¢mpada2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Overlays/Audio/Audio.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/button.2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/controles (1).png" type="Texture" id=11]
[ext_resource path="res://Sprites/Jogar.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Non Playables/misc/Title Screen.tres" type="SpriteFrames" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 3 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 180, 319 )
frames = ExtResource( 13 )

[node name="Logo" type="Node2D" parent="."]
position = Vector2( 176, 80 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Logo"]
position = Vector2( 7.99998, -66 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true

[node name="OvoButton" type="TextureButton" parent="Logo/AnimatedSprite"]
margin_left = -126.0
margin_top = -26.0
margin_right = 126.0
margin_bottom = 26.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_top = 281.0
margin_right = 312.0
margin_bottom = 608.0

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 334.0
margin_right = 320.0
margin_bottom = 422.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="StartButton"]
position = Vector2( 134, 43 )
scale = Vector2( 0.766055, 0.652381 )
texture = ExtResource( 12 )

[node name="QuitButton" type="TextureButton" parent="."]
visible = false
margin_left = 48.0
margin_top = 504.0
margin_right = 320.0
margin_bottom = 592.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="RichTextLabel3" type="RichTextLabel" parent="QuitButton"]
margin_left = 98.0
margin_top = 25.0
margin_right = 177.0
margin_bottom = 65.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " SAIR"

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 469.0
margin_right = 320.0
margin_bottom = 557.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="ControlsButton"]
position = Vector2( 136, 33 )
scale = Vector2( 0.930556, 0.89604 )
texture = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 284.0
margin_top = 617.0
margin_right = 360.0
margin_bottom = 639.0
color = Color( 0, 0, 0, 0.592157 )

[node name="GameVersion2" type="RichTextLabel" parent="."]
margin_left = 283.0
margin_top = 599.0
margin_right = 387.0
margin_bottom = 641.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "
   VER 1.0.2.1"
scroll_active = false

[node name="Sprite" type="TextureButton" parent="."]
margin_left = -21.0
margin_top = 580.0
margin_right = 231.0
margin_bottom = 748.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 7 )

[node name="Audio" parent="." instance=ExtResource( 8 )]

[connection signal="tree_exiting" from="." to="." method="_on_Title_Screen_tree_exiting"]
[connection signal="pressed" from="Logo/AnimatedSprite/OvoButton" to="." method="_on_OvoButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
